# BrAIns

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: chat.py  const.py
src/modules/: common.py
src/modules/database/: database.py
src/pages/: brains.py  brains_info.json
