[project]
name = "brains"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "papasim824", email = "papasim824@gmail.com" }
]
dependencies = [
    "extra-streamlit-components",
    "openai",
    "st-pages",
    "st-supabase-connection",
    "streamlit",
    "streamlit-autorefresh",
    "streamlit_extras",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/brains"]
